fixed footer link to align and display in 2 columns

--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -283,6 +283,10 @@ section {
   position: relative;
 }
 
+* {
+  border: 1px solid purple;
+}
+
 /*********************************
 3. Header
 *********************************/
